--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
-<h1>
-  {{title}}
-</h1>
+<section class="background">
+  <div class="graphics"></div>
+  <header class="main-header"></header>
+  <div class="main-content">
+        <app-me-card></app-me-card>
+        <app-my-works-cards></app-my-works-cards>
+        <app-my-skills-cards></app-my-skills-cards>
+  </div>
+  <footer class="main-footer"></footer>
+</section>
