--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    margin: 0;
+    padding: 0;
+}
+
+.main-content section {
+    margin: 2em 0;
+    min-height: 400px;
+}
+
+section {
+    min-height: 100px;
+}
