--- a/src/app/me-card/me-card.component.html
+++ b/src/app/me-card/me-card.component.html
@@ -1,1 +1,21 @@
-<section class="me-card"></section>
+<div class="main-header" appJsOnscroll >
+    <section class="me-card">
+        <div class="my-dp">
+            <img title="My Picture" alt="Jayabratha's Photo" src="assets/images/my-pic.jpg" />
+        </div>
+        <div class="my-card">
+            <div class="name"><span>Jayabratha Saha</span></div>
+            <div class="title">Designer & Developer</div>
+            <div class="github-link"><i class="ion-social-github"></i></div>
+        </div>
+    </section>
+    <nav class="site-nav">
+        <ul class="site-nav-list">
+            <li class="active">Art</li>
+            <li>Work</li>
+            <li>Skills</li>
+            <li>About</li>
+            <li>Contact</li>
+        </ul>
+    </nav>
+</div>
