Making header fixed on scroll

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <section class="background">
-  <div class="graphics"></div>
-  <app-me-card></app-me-card>
+  <me-card></me-card>
   <div class="main-content">
         <app-my-works-cards></app-my-works-cards>
         <app-my-skills-cards></app-my-skills-cards>
