--- a/src/app/me-card/me-card.component.css
+++ b/src/app/me-card/me-card.component.css
@@ -7,6 +7,19 @@
     padding: 10em 0 2em; 
 }
 
+.hello-card {
+    position: absolute;
+    width: 3em;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    font-size: 5em;
+    line-height: 1em;
+    color: #696969;
+    opacity: 0;
+    transition: opacity 0.5s;
+}
+
 .me-card {
     max-width: 55em;
     width: 80%;
@@ -66,6 +79,27 @@
     top: 0.5em;
     transition: all 0.5s ease-in;
 }
+/* Initial Header Styles - Start */
+.initial-header .hello-card {
+    opacity: 1;
+}
+
+.initial-header .me-card {
+    margin-top: 19.25em;
+    height: 0.15em;
+    transition: none;
+}
+
+.initial-header .my-dp,
+.initial-header .name,
+.initial-header .title,
+.initial-header .github-link  {
+    opacity: 0;
+}
+.initial-header .site-nav-list>li {
+    opacity: 0;
+}
+/* Initial Header Styles - End */
 
 /* Fixed Header Styles - Start */
 .main-header.fix-header {
@@ -97,6 +131,7 @@
     opacity: 0;
     overflow: hidden;
 }
+/* Fixed Header Styles - End */
 
 /* Nav Style */
 ul.site-nav-list {
@@ -138,7 +173,7 @@ ul.site-nav-list li.active {
     }
 
     .me-card {
-        height: auto;
+        height: 42em;
     }
 
     .my-card, .my-dp {
@@ -167,4 +202,21 @@ ul.site-nav-list li.active {
     .fix-header .my-card {
         margin-top: 0
     }
+    /* Fixed Header Styles - End */
+
+    /* Initial Header Styles - Start */
+    .initial-header .hello-card {
+        margin-top: 3em;
+    }
+    .initial-header .me-card {
+        margin-top: 41.75em;
+        height: 0.15em;
+    }
+    .initial-header .my-dp {
+        display: none;
+    }
+    .initial-header .my-card {
+        margin-top: 0;
+    }
+    /* Initial Header Styles - End */
 }
