--- a/src/app/me-card/me-card.component.css
+++ b/src/app/me-card/me-card.component.css
@@ -1,6 +1,10 @@
+.center-stage {
+    width: 80%;
+    max-width: 55em;
+    margin: auto;
+}
 .main-header {
-    position: absolute;
-    width: 100%;
+    position: relative;
     background: #fff;
     box-shadow: 0 1px 4px rgba(0,0,0,.04);
     border-bottom: 1px solid rgba(0,0,0,.09);
@@ -8,43 +12,34 @@
 }
 .logo-menu {
     position: fixed;
-    max-width: 55em;
     top: 0;
-    width: 80%;
-    margin: 8px auto;
+    margin: 11px auto;
     left: 0;
     right: 0;
 }
 .menu-section, .logo-section {
     position: relative;
     display: inline-block;
-    width: 60px;
-    height: 45px;
+    width: 50px;
+    height: 38px;
     background: #333333;
     opacity: 1;
-    transition: all 0.5s;
+    transition: margin 0.5s;
 }
-.menu-icon, .menu-icon:after, .menu-icon:before {
+.menu-icon, .menu-icon-top, .menu-icon-bottom {
     position: absolute;
     background-color: #FFF;
-    top: 22px;
-    margin-left: 15px;
-    width: 30px;
+    top: 19px;
+    margin-left: 11px;
+    left: 0;
+    width: 28px;
     height: 1px;
     content: '';
     -webkit-transition: all .5s;
     transition: all .5s;
 }
-.menu-icon:before {
-    top: 0;
-    margin: 0;
-}
-.menu-icon:after {
-    top: 0;
-    margin: 0;
-}
 .logo-section {
-    margin-left: -63px;
+    margin-left: -53px;
 }
 
 .hello-card {
@@ -61,8 +56,6 @@
 }
 
 .me-card {
-    max-width: 55em;
-    width: 80%;
     height: 19.3em;
     margin: 0 auto 0;
     background: #FFFFFF;
@@ -77,7 +70,7 @@
     height: 19.3em;
     overflow: hidden;
     z-index: 5;
-    transition: all 0.5s ease-in;
+    transition: opacity 0.5s ease-in;
 }
 
 .my-dp>img {
@@ -101,7 +94,7 @@
     font-family: 'Playfair Display', serif;
     font-size: 5em;
     line-height: 1em;
-    transition: all 0.5s;
+    transition: opacity 0.5s;
 }
 
 .title {
@@ -110,7 +103,7 @@
     font-family: 'Playfair Display', serif;
     text-transform: uppercase;
     letter-spacing: 0.5em;
-    transition: all 0.5s;
+    transition: opacity 0.5s;
 }
 
 .github-link {
@@ -118,7 +111,7 @@
     right: 0.5em;
     font-size: 2.5em;
     top: 0.5em;
-    transition: all 0.5s ease-in;
+    transition: opacity 0.5s ease-in;
 }
 /* Initial Header Styles - Start */
 .initial-header .menu-section, .initial-header .logo-section {
@@ -156,15 +149,16 @@
     position: fixed;
     width: 100%;
     padding: 60px 0 0;
+    z-index: 10;
 }
 .fix-header .logo-section {
     margin-left: -2px;
 }
-.fix-header .menu-icon:before {
-    top: -8px;
+.fix-header .menu-icon-top {
+    top: 11px;
 }
-.fix-header .menu-icon:after {
-    top: 8px;
+.fix-header .menu-icon-bottom {
+    top: 27px;
 }
 .fix-header .me-card {
     position: relative;
@@ -194,11 +188,52 @@
 }
 /* Fixed Header Styles - End */
 
-/* Nav Style */
+/* Show Menu Styles - Start */
+.fix-header.show-menu .me-card {
+    position: relative;
+    height: 35em;
+}
+.fix-header.show-menu .my-card {
+    height: 33.5em;
+}
+.fix-header.show-menu .site-nav {
+    position: absolute;
+    top: 4em;
+    height: 30em;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    width: 80%;
+}
+.fix-header.show-menu .site-nav-list {
+    position: relative;
+    width: 100%;
+    min-height: 5em;
+    height: auto;
+    padding: 4em 0;
+    opacity: 1;
+}
+.fix-header ul.site-nav-list li {
+    font-size: 2.5em;
+    float: none;
+    text-transform: none;
+    padding: 0;
+    padding-top: 0.2em;
+    text-align: center;
+    width: 70%;
+    margin: 0 auto;
+    color: #FFFFFF;
+    transition: padding-top 1s;
+}
+.fix-header.show-menu ul.site-nav-list li {
+    padding-top: 0.6em;
+}
+/* Show Menu Styles - End */
+
+/* Nav Style - Start*/
 ul.site-nav-list {
     list-style: none;
-    max-width: 55em;
-    width: 80%;
+    width: 100%;
     height: 4em;
     margin: 0 auto;
     padding: 5em 0 2em;
@@ -214,14 +249,30 @@ ul.site-nav-list li {
     width: 20%;
     color: #333333
 }
+/* Nav Style - End */
 
-/*ul.site-nav-list li.active {
-    color: black;
-}*/
+.fix-header.show-menu .menu-icon {
+    opacity: 0;
+    left: -20px;
+}
+.fix-header.show-menu .menu-icon-top {
+    top: 19px;
+    -webkit-transform: rotate(135deg);
+    -moz-transform: rotate(135deg);
+    -o-transform: rotate(135deg);
+    transform: rotate(135deg);
+}
+.fix-header.show-menu .menu-icon-bottom {
+    top: 19px;
+    -webkit-transform: rotate(-135deg);
+    -moz-transform: rotate(-135deg);
+    -o-transform: rotate(-135deg);
+    transform: rotate(-135deg);
+}
 
 /* Tab Styles - Start */
 @media (max-width: 950px) {
-    .me-card {
+    .center-stage {
         width: 90%;
     }
 }
@@ -232,25 +283,13 @@ ul.site-nav-list li {
     .logo-menu {
         margin: 20px auto;
         z-index: 7;
-        width: 90%;
         padding: 5px;
     }
     .menu-section, .logo-section {
         background: #FFFFFF;
     }
-    .logo-section {
-        margin-left: -2px;
-    }
-    .menu-icon, .menu-icon:before, .menu-icon:after {
+    .menu-icon, .menu-icon-top, .menu-icon-bottom {
         background: #333333;
-    }
-    .menu-icon:before {      
-        top: -8px;
-        margin: 0;
-    }
-    .menu-icon:after {
-        top: 8px;
-        margin: 0;
     }
     .hello-card {
         margin-top: 3em;
@@ -299,13 +338,13 @@ ul.site-nav-list li {
 
     /* Fixed Header Styles - Start */
     .fix-header .logo-menu {
-        margin: 8px auto;
+        margin: 12px auto;
         padding: 0;
     }
     .fix-header .menu-section, .fix-header .logo-section {
         background: #333333;
     }
-    .fix-header .menu-icon, .fix-header .menu-icon:before, .fix-header .menu-icon:after {
+    .fix-header .menu-icon, .fix-header .menu-icon-top, .fix-header .menu-icon-bottom {
         background: #FFFFFF;
     }
     .fix-header .my-dp {
@@ -317,6 +356,12 @@ ul.site-nav-list li {
     .fix-header .my-card-wrapper {
         margin-top: 0;
         height: 0;
+    }
+    .fix-header .site-nav {
+        display: block;
+    }
+    .fix-header.show-menu .my-card {
+        height: 43.5em;
     }
     /* Fixed Header Styles - End */
 
@@ -341,6 +386,10 @@ ul.site-nav-list li {
 
 @media (max-width: 650px) and (min-width: 450px) {
     .me-card {
+        width: 80%;
+        max-width: 370px;
+    }
+    .logo-menu {
         width: 80%;
         max-width: 370px;
     }
