--- a/src/app/me-card/me-card.component.html
+++ b/src/app/me-card/me-card.component.html
@@ -1,7 +1,9 @@
-<div class="main-header" [ngClass]="{'fix-header': isHeaderFix, 'initial-header': isInitial}" >
-    <div class="logo-menu">
-        <div class="menu-section">
+<div class="main-header" [ngClass]="{'fix-header': isHeaderFix, 'initial-header': isInitial, 'show-menu': showMenu}" >
+    <div class="logo-menu center-stage">
+        <div class="menu-section" (click)="toggleMenu()">
+            <div class="menu-icon-top"></div>
             <div class="menu-icon"></div>
+            <div class="menu-icon-bottom"></div>
         </div>
         <div class="logo-section"></div>
     </div>
@@ -9,7 +11,7 @@
         <div class="overlay"></div>
         <div class="hello"><span>Hello World!</span></div>
     </section>
-    <section class="me-card">
+    <section class="me-card center-stage">
         <div class="my-dp">
             <img title="My Picture" alt="Jayabratha's Photo" src="assets/images/my-pic.jpg" />
         </div>
@@ -21,7 +23,7 @@
             </div>
         </div>
     </section>
-    <nav class="site-nav">
+    <nav class="site-nav center-stage">
         <ul class="site-nav-list">
             <li class="active">Art</li>
             <li>Work</li>
