Adding Common Styles and Fixes

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,15 +6,9 @@ section.background {
     overflow: hidden;
 }
 
-.center-stage {
-    width: 80%;
-    max-width: 55em;
-    margin: auto;
-}
-
 .main-content {
     min-height: 2000px;
-    margin-top: 10em;
+    margin-top: 12em;
 }
 
 .js-logo {
@@ -31,7 +25,7 @@ section.background {
     display: inline-block;
     background: #FFFFFF;
     width: 100%;
-    min-height: 400px;
+    height: 25em;
     margin: 3em 0;
     box-shadow: 0 1px 4px rgba(0,0,0,.05);
     border: 1px solid rgba(0,0,0,.09);
@@ -44,24 +38,19 @@ section.background {
 .overview.above-view {
    transform: translateY(-300px);
 }
-.overview .overview-dp {
-    position: absolute;
-    width: 35%;
+.dp.overview-dp {
     background: #333333;
-    height: 100%;
+    height: 25em;
 }
 .overview:nth-child(odd) .overview-dp {
-    right: 0;
+    float: right;
 }
 /* Overview Styles - End */
 
 /* Tab Styles - Start */
 @media (max-width: 950px) {
-    .center-stage {
-        width: 90%;
-    }
     .main-content {
-        margin-top: 40em;
+        margin-top: 30em;
     }
     .main-content.fix-header {
         margin-top: 31em;
@@ -80,3 +69,4 @@ section.background {
         margin-left: 0.5em;
     }
 }
+/* Mobile Styles - End */
