--- a/src/app/me-card/me-card.component.html
+++ b/src/app/me-card/me-card.component.html
@@ -12,7 +12,7 @@
         <div class="hello"><span>Hello World!</span></div>
     </section>
     <section class="me-card center-stage">
-        <div class="my-dp">
+        <div class="dp my-dp">
             <img title="My Picture" alt="Jayabratha's Photo" src="assets/images/my-pic.jpg" />
         </div>
         <div class="my-card-wrapper" appJsOnscroll padding=60 (onStateChange)="headerStateChange($event)">
