--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <me-card></me-card>
   <div class="main-content center-stage" [ngClass]="{'fix-header': isHeaderFix}">
       <div class="overview art-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200 (onStateChange)="animateEnter($event)" >
-        <div class="overview-dp">            
+        <div class="dp overview-dp">            
         </div>
         <div class="overview-content-wrapper">
             <div class="overview-content">
@@ -10,7 +10,31 @@
         </div>
       </div>
       <div class="overview art-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200 (onStateChange)="animateEnter($event)" >
-        <div class="overview-dp">            
+        <div class="dp overview-dp">            
+        </div>
+        <div class="overview-content-wrapper">
+            <div class="overview-content">
+            </div>
+        </div>
+      </div>
+      <div class="overview art-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200 (onStateChange)="animateEnter($event)" >
+        <div class="dp overview-dp">            
+        </div>
+        <div class="overview-content-wrapper">
+            <div class="overview-content">
+            </div>
+        </div>
+      </div>
+      <div class="overview art-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200 (onStateChange)="animateEnter($event)" >
+        <div class="dp overview-dp">            
+        </div>
+        <div class="overview-content-wrapper">
+            <div class="overview-content">
+            </div>
+        </div>
+      </div>
+      <div class="overview art-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200 (onStateChange)="animateEnter($event)" >
+        <div class="dp overview-dp">            
         </div>
         <div class="overview-content-wrapper">
             <div class="overview-content">
