--- a/src/app/me-card/me-card.component.html
+++ b/src/app/me-card/me-card.component.html
@@ -25,11 +25,14 @@
     </section>
     <nav class="site-nav center-stage">
         <ul class="site-nav-list">
-            <li class="active">Art</li>
-            <li>Work</li>
-            <li>Skills</li>
-            <li>About</li>
-            <li>Contact</li>
+            <li (mouseenter)="activeNav='art'" (mouseleave)="activeNav=''">Art</li>
+            <li (mouseenter)="activeNav='work'" (mouseleave)="activeNav=''">Work</li>
+            <li (mouseenter)="activeNav='skills'" (mouseleave)="activeNav=''">Skills</li>
+            <li (mouseenter)="activeNav='about'" (mouseleave)="activeNav=''">About</li>
+            <li (mouseenter)="activeNav='contact'" (mouseleave)="activeNav=''">Contact</li>
         </ul>
     </nav>
+    <div class="nav-highlighter-wrapper center-stage">
+        <div class="nav-highlighter" [ngClass]="activeNav"></div>
+    </div>
 </div>
