--- a/src/app/me-card/me-card.component.html
+++ b/src/app/me-card/me-card.component.html
@@ -5,7 +5,9 @@
             <div class="menu-icon"></div>
             <div class="menu-icon-bottom"></div>
         </div>
-        <div class="logo-section"></div>
+        <div class="logo-section">
+            <i class="icon-logo-svg"></i>
+        </div>
     </div>
     <section class="hello-card">
         <div class="overlay"></div>
