--- a/src/styles.css
+++ b/src/styles.css
@@ -18,7 +18,7 @@ body {
     min-height: 400px;
 }
 
-@import url("ionicons.min.css");
+@import url("icon-styles.css");
 
 
 /* Tab Styles - Start */
