--- a/src/app/me-card/me-card.component.html
+++ b/src/app/me-card/me-card.component.html
@@ -21,7 +21,7 @@
             <div id="test" class="my-card">
                 <div class="name"><span>Jayabratha Saha</span></div>
                 <div class="title">Designer & Developer</div>
-                <div class="github-link"><i class="ion-social-github"></i></div>
+                <div class="github-link"><i class="icon-social-github"></i></div>
             </div>
         </div>
     </section>
