DP carousel Initial Complete

--- a/src/app/me-card/me-card.component.html
+++ b/src/app/me-card/me-card.component.html
@@ -15,7 +15,7 @@
     </section>
     <section class="me-card center-stage">
         <div class="dp my-dp">
-            <img title="My Picture" alt="Jayabratha's Photo" src="assets/images/my-pic.jpg" />
+            <app-js-carousel slideCount=5></app-js-carousel>
         </div>
         <div class="my-card-wrapper" appJsOnscroll padding=60 (onStateChange)="headerStateChange($event)">
             <div id="test" class="my-card">
